--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       <div class="title">Snake</div>
     </a>
     <a href="tic.html" class="game-card">
-      <img src="tic.jpg" alt="Tic Tac Toe Game">
+      <img src="Tic.jpg" alt="Tic Tac Toe Game">
       <div class="title">Tic Tac Toe</div>
     </a>
     <a href="memory.html" class="game-card">
