--- a/memory.html
+++ b/memory.html
@@ -138,7 +138,7 @@
                 <p class="text-sm text-gray-500 mt-2">Find all the matching pairs</p>
             </div>
             <div class="mt-10">
-                <a href="#" class="text-sm text-gray-400 hover:text-gray-600 transition-colors">
+                <a href="index.html" class="text-sm text-gray-400 hover:text-gray-600 transition-colors">
                     Back to Homepage
                 </a>
             </div>
